--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -10,7 +10,7 @@
 
 % Fonts: Young Serif for headers/name, TeX Gyre Heros for body
 \setmainfont{TeX Gyre Heros}[Scale=0.95]
-\newfontfamily\youngserif{Young Serif}
+\newfontfamily\youngserif{YoungSerif-Regular.ttf}[Path=./fonts/]
 
 % Color palette
 \definecolor{Accent}{HTML}{12355B}
