--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -57,18 +57,18 @@
 \newif\ifboldlead
 \boldroletrue
 \boldleadtrue
-\newcommand{\Role}[1]{\ifboldrole\textbf{#1}\else#1\fi}
+\newcommand{\Role}[1]{{\youngserif\ifboldrole\textbf{#1}\else#1\fi}}
 \newcommand{\Lead}[1]{\ifboldlead\textbf{#1}\else#1\fi}
 \newcommand{\EntryGap}{\vspace{3pt}}
 
-% Pipe + italic meta formatting
-\newcommand{\Meta}[1]{{\textbar{}\ \textit{\color{Slate}#1}}}
+% Pipe + italic meta formatting — Young Serif italic
+\newcommand{\Meta}[1]{{\youngserif\textbar{}\ \textit{\color{Slate}#1}}}
 
 \begin{document}
 \fontsize{9.8}{11.15}\selectfont
 
 \begin{minipage}[b]{0.38\linewidth}
-{\youngserif\fontsize{24}{26}\selectfont\bfseries\color{Accent} JAKOB LANGTRY}
+{\youngserif\fontsize{24}{26}\selectfont\bfseries\color{Accent} Jakob Langtry}
 \end{minipage}%
 \hfill
 \begin{minipage}[b]{0.60\linewidth}
@@ -83,8 +83,8 @@
 {\color{Accent}\rule{\linewidth}{0.8pt}}
 
 \section*{Education}
-\textbf{Rochester Institute of Technology} \Meta{B.S. Software Engineering} \hfill Expected May 2026 \\
-\textbf{Corning Community College} \Meta{A.S. Computer Science} \hfill Graduated Dec 2021
+{\youngserif\textbf{Rochester Institute of Technology}} \Meta{B.S. Software Engineering} \hfill Expected May 2026 \\
+{\youngserif\textbf{Corning Community College}} \Meta{A.S. Computer Science} \hfill Graduated Dec 2021
 
 \section*{Experience}
 {\Role{WeTheHobby \Meta{Software Engineering Co-op}}} \hfill Jun 2025 -- Present \\
@@ -167,7 +167,7 @@ Technologies: Swift, SwiftUI, SwiftData, PDFKit, SwiftSoup
 \end{itemize}
 
 \section*{Skills}
-\textbf{Programming Languages:} C, C++, C\#, Java, Python, Swift, Lua, Assembly, SQL, Terraform, JavaScript, TypeScript \\
-\textbf{Other Relevant Skills:} IT Helpdesk, Maven, CI/CD, Unix Shell, Linux, Angular, Vue, React, AWS, .NET, Netconf
+{\youngserif\textbf{Programming Languages:}} C, C++, C\#, Java, Python, Swift, Lua, Assembly, SQL, Terraform, JavaScript, TypeScript \\
+{\youngserif\textbf{Other Relevant Skills:}} IT Helpdesk, Maven, CI/CD, Unix Shell, Linux, Angular, Vue, React, AWS, .NET, Netconf
 
 \end{document}
