--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -63,6 +63,8 @@
 
 % Pipe + italic meta formatting — Young Serif italic
 \newcommand{\Meta}[1]{{\youngserif\textbar{}\ \textit{\color{Slate}#1}}}
+\newcommand{\Date}[1]{{\youngserif\textit{#1}}}
+\newcommand{\Tech}[1]{{\youngserif\textbf{Technologies:}} #1}
 
 \begin{document}
 \fontsize{9.8}{11.15}\selectfont
@@ -83,12 +85,12 @@
 {\color{Accent}\rule{\linewidth}{0.8pt}}
 
 \section*{Education}
-{\youngserif\textbf{Rochester Institute of Technology}} \Meta{B.S. Software Engineering} \hfill Expected May 2026 \\
-{\youngserif\textbf{Corning Community College}} \Meta{A.S. Computer Science} \hfill Graduated Dec 2021
+{\youngserif\textbf{Rochester Institute of Technology}} \Meta{B.S. Software Engineering} \hfill \Date{May 2026} \\
+{\youngserif\textbf{Corning Community College}} \Meta{A.S. Computer Science} \hfill \Date{Dec 2021}
 
 \section*{Experience}
-{\Role{WeTheHobby \Meta{Software Engineering Co-op}}} \hfill Jun 2025 -- Present \\
-Technologies: React, TypeScript, C\#, .NET, ASP.NET Core, MUI, AWS, SQL, Streaming Infrastructure, Cursor
+{\Role{WeTheHobby \Meta{Software Engineering Co-op}}} \hfill \Date{Jun 2025 -- Present} \\
+\Tech{React, TypeScript, C\#, .NET, ASP.NET Core, MUI, AWS, SQL, Streaming Infrastructure, Cursor}
 \begin{itemize}
   \item \Lead{Refactored user system (CQRS)} in the admin portal; eliminated manual database user creation.
   \item \Lead{Built bulk upload tooling} to import 10K+ row tab-delimited sheets into the new DB.
@@ -99,8 +101,8 @@ Technologies: React, TypeScript, C\#, .NET, ASP.NET Core, MUI, AWS, SQL, Streami
 \end{itemize}
 \EntryGap
 
-{\Role{Precision Optical Technologies (Purchased by Belden) \Meta{Software Engineering Co-op}}} \hfill Aug 2024 -- May 2025 \\
-Technologies: C, C++, Make, Unix, Netconf, RPC, SNMP, Optical Networking, YANG
+{\Role{Precision Optical Technologies (Purchased by Belden) \Meta{Software Engineering Co-op}}} \hfill \Date{Aug 2024 -- May 2025} \\
+\Tech{C, C++, Make, Unix, Netconf, RPC, SNMP, Optical Networking, YANG}
 \begin{itemize}
   \item \Lead{Enabled breakout mode} for QSFP NNI ports and migrated SNMP tables to 2.0 OID range.
   \item \Lead{Created polling worker} monitoring admin state/transceiver presence; triggered alarms and LED state updates.
@@ -109,14 +111,14 @@ Technologies: C, C++, Make, Unix, Netconf, RPC, SNMP, Optical Networking, YANG
 \end{itemize}
 \EntryGap
 
-{\Role{Apple, Inc. \Meta{Product Specialist}}} \hfill Oct 2023 -- Feb 2024
+{\Role{Apple, Inc. \Meta{Product Specialist}}} \hfill \Date{Oct 2023 -- Feb 2024}
 \begin{itemize}
   \item \Lead{Learned critical time management}: handled dense part-time work while attending school full-time.
   \item \Lead{Assisted customers daily} with device setup and tailored solutions while consistently hitting sales targets.
 \end{itemize}
 \EntryGap
 
-{\Role{Hardinge, Inc. \Meta{IT/Computer Science Intern}}} \hfill Jun 2021 -- Aug 2021
+{\Role{Hardinge, Inc. \Meta{IT/Computer Science Intern}}} \hfill \Date{Jun 2021 -- Aug 2021}
 \begin{itemize}
   \item Sole programmer on initiative; implemented software-vendor metrics tooling on legacy systems.
   \item Developed a system to auto-display PowerPoints on dozens of factory TVs.
@@ -124,7 +126,7 @@ Technologies: C, C++, Make, Unix, Netconf, RPC, SNMP, Optical Networking, YANG
 \end{itemize}
 
 \section*{Leadership}
-{\Role{President \Meta{RIT Society of Software Engineers}}} \hfill 2024 -- 2025
+{\Role{President \Meta{RIT Society of Software Engineers}}} \hfill \Date{2024 -- 2025}
 \begin{itemize}
   \item \Lead{Finished website rework}: completed full rework of the SSE website at sse.rit.edu with new features and improvements.
   \item \Lead{Expanded sponsorships}: added 5 new corporate partnerships; funded events and internal tooling.
@@ -132,36 +134,36 @@ Technologies: C, C++, Make, Unix, Netconf, RPC, SNMP, Optical Networking, YANG
 \end{itemize}
 
 \section*{Projects}
-{\Role{Playlist Converter \Meta{Personal Project}}} \hfill Dec 2025 \\
-Technologies: Next.js, React, TypeScript, Tailwind CSS, PostgreSQL, Drizzle ORM, Spotify OAuth, Apple MusicKit
+{\Role{Playlist Converter \Meta{Personal Project}}} \hfill \Date{Dec 2025} \\
+\Tech{Next.js, React, TypeScript, Tailwind CSS, PostgreSQL, Drizzle ORM, Spotify OAuth, Apple MusicKit}
 \begin{itemize}
   \item \Lead{Built Spotify/Apple Music playlist conversion} with ISRC matching, fuzzy fallback, manual matching, and shareable expiring links.
 \end{itemize}
 \EntryGap
 
-{\Role{React Kanban Board \Meta{Personal Project}}} \hfill Feb 2025 -- May 2025 \\
-Technologies: Next.js, React, TypeScript, Prisma (MySQL), NextAuth, Tailwind CSS, ShadCN UI, Nodemailer, Zod
+{\Role{React Kanban Board \Meta{Personal Project}}} \hfill \Date{Feb 2025 -- May 2025} \\
+\Tech{Next.js, React, TypeScript, Prisma (MySQL), NextAuth, Tailwind CSS, ShadCN UI, Nodemailer, Zod}
 \begin{itemize}
   \item OAuth-secured shared boards with invites/resets, drag-drop UI, comments/markdown/attachments, and JSON Merge Patch updates.
 \end{itemize}
 \EntryGap
 
-{\Role{Delegative Strategy Game \Meta{Personal Project}}} \hfill Jan 2026 \\
-Technologies: Python, Textual, Rich, Pydantic, HTTPX, Agentic Tool Calling, OpenRouter API
+{\Role{Delegative Strategy Game \Meta{Personal Project}}} \hfill \Date{Jan 2026} \\
+\Tech{Python, Textual, Rich, Pydantic, HTTPX, Agentic Tool Calling, OpenRouter API}
 \begin{itemize}
   \item \Lead{Built an AI-driven text strategy simulation} with natural-language orders, advisor dialogue, and time-based world-state progression.
 \end{itemize}
 \EntryGap
 
-{\Role{WebsiteTheSSEquel \Meta{sse.rit.edu (Open Source)}}} \hfill Jan 2026 -- Present \\
-Technologies: Next.js, TypeScript, Prisma, NextAuth, Tailwind CSS, PostgreSQL
+{\Role{WebsiteTheSSEquel \Meta{sse.rit.edu (Open Source)}}} \hfill \Date{Jan 2026 -- Present} \\
+\Tech{Next.js, TypeScript, Prisma, NextAuth, Tailwind CSS, PostgreSQL}
 \begin{itemize}
   \item \Lead{Contributed production features}: role-based OAuth scopes, invite flow, event/attendance tooling, mentoring/mobile fixes, and mass-email/event-link improvements.
 \end{itemize}
 \EntryGap
 
-{\Role{ReadFaster \Meta{Personal Project}}} \hfill Jan 2026 \\
-Technologies: Swift, SwiftUI, SwiftData, PDFKit, SwiftSoup
+{\Role{ReadFaster \Meta{Personal Project}}} \hfill \Date{Jan 2026} \\
+\Tech{Swift, SwiftUI, SwiftData, PDFKit, SwiftSoup}
 \begin{itemize}
   \item \Lead{Built RSVP speed-reading app} for iOS/macOS with TXT/EPUB/PDF support, adaptive pacing, chapter navigation, and comprehension-focused controls.
 \end{itemize}
