--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -123,7 +123,7 @@
 \section*{Leadership}
 {\Role{President \Meta{RIT Society of Software Engineers}}} \hfill \Date{2024 -- 2025}
 \begin{itemize}
-  \item Finished website rework of sse.rit.edu; \textit{new features and improvements across the full stack.}
+  \item Finished website rework of sse.rit.edu; \textit{replacing campusgroups and google drive for club management.}
   \item Expanded sponsorships with 5 new corporate partnerships; \textit{funded events and internal tooling.}
   \item Secured lab renovation; \textit{won approvals despite red tape; modernizing member space.}
 \end{itemize}
