--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -1,5 +1,5 @@
 \documentclass[10pt]{article}
-\usepackage[margin=0.56in]{geometry}
+\usepackage[margin=0.52in]{geometry}
 \usepackage{enumitem}
 \usepackage{titlesec}
 \usepackage{xcolor}
@@ -36,42 +36,42 @@
   {\youngserif\bfseries\large\color{Accent}}
   {}{0em}{}
   [{\color{Accent}\titlerule}]
-\titlespacing{\section}{0pt}{6pt}{3pt}
+\titlespacing{\section}{0pt}{5pt}{2pt}
 
 % Item spacing
 \setlist[itemize]{
   leftmargin=*,
   label=-,
-  itemsep=1pt,
-  topsep=2pt,
+  itemsep=0pt,
+  topsep=1pt,
   parsep=0pt,
   partopsep=0pt,
   before=\vspace{0pt},
-  after=\vspace{1pt}
+  after=\vspace{0pt}
 }
 
 % No page numbers
 \pagenumbering{gobble}
 
-% Role headings use Young Serif bold
-\newcommand{\Role}[1]{{\youngserif\textbf{#1}}}
-\newcommand{\EntryGap}{\vspace{4pt}}
+% Role headings use Young Serif italic
+\newcommand{\Role}[1]{{\youngserif\textit{#1}}}
+\newcommand{\EntryGap}{\vspace{2pt}}
 
 % Pipe + italic meta formatting — Young Serif italic
 \newcommand{\Meta}[1]{{\youngserif\textbar{}\ \textit{\color{Slate}#1}}}
 \newcommand{\Date}[1]{{\youngserif\textit{#1}}}
-\newcommand{\Tech}[1]{{\youngserif\textbf{Technologies:}} #1}
-\newcommand{\Action}[1]{{\youngserif\color{Accent}\textbf{#1}}}
+\newcommand{\Tech}[1]{{\youngserif Technologies:} #1}
+\newcommand{\Action}[1]{{\color{Accent}#1}}
 \newcommand{\Narrative}[1]{{\color{Body}#1}}
 
 \begin{document}
-\fontsize{9.8}{11.5}\selectfont
+\fontsize{9.8}{11.35}\selectfont
 
-\begin{minipage}[b]{0.38\linewidth}
-{\youngserif\fontsize{24}{26}\selectfont\bfseries\color{Accent} Jakob Langtry}
+\begin{minipage}[b]{0.47\linewidth}
+{\youngserif\fontsize{30}{32}\selectfont\bfseries\color{Accent} Jakob Langtry}
 \end{minipage}%
 \hfill
-\begin{minipage}[b]{0.60\linewidth}
+\begin{minipage}[b]{0.51\linewidth}
 \raggedleft
 {\small
 {\faEnvelope}\ \href{mailto:jjalangtry@gmail.com}{jjalangtry@gmail.com} \,|\,
@@ -83,8 +83,8 @@
 {\color{Accent}\rule{\linewidth}{0.8pt}}
 
 \section*{Education}
-{\youngserif\textbf{Rochester Institute of Technology}} \Meta{B.S. Software Engineering} \hfill \Date{May 2026} \\
-{\youngserif\textbf{Corning Community College}} \Meta{A.S. Computer Science} \hfill \Date{Dec 2021}
+{\youngserif Rochester Institute of Technology} \Meta{B.S. Software Engineering} \hfill \Date{May 2026} \\
+{\youngserif Corning Community College} \Meta{A.S. Computer Science} \hfill \Date{Dec 2021}
 
 \section*{Experience}
 {\Role{WeTheHobby \Meta{Software Engineering Co-op}}} \hfill \Date{Jun 2025 -- Present} \\
@@ -167,7 +167,7 @@
 \end{itemize}
 
 \section*{Skills}
-{\youngserif\textbf{Programming Languages:}} C, C++, C\#, Java, Python, Swift, Lua, Assembly, SQL, Terraform, JavaScript, TypeScript \\
-{\youngserif\textbf{Other Relevant Skills:}} IT Helpdesk, Maven, CI/CD, Unix Shell, Linux, Angular, Vue, React, AWS, .NET, Netconf
+{\youngserif Programming Languages:} C, C++, C\#, Java, Python, Swift, Lua, Assembly, SQL, Terraform, JavaScript, TypeScript \\
+{\youngserif Other Relevant Skills:} IT Helpdesk, Maven, CI/CD, Unix Shell, Linux, Angular, Vue, React, AWS, .NET, Netconf
 
 \end{document}
