--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -128,7 +128,7 @@
 \section*{Leadership}
 {\Role{President \Meta{RIT Society of Software Engineers}}} \hfill \Date{2024 -- 2025}
 \begin{itemize}
-  \item \Action{Finished website rework of sse.rit.edu;} \Narrative{replacing campusgroups and google drive for club management.}
+  \item \Action{Finished website rework of sse.rit.edu;} \Narrative{replacing Campusgroups and google drive for club management.}
   \item \Action{Expanded sponsorships with 5 new corporate partnerships;} \Narrative{funded events and internal tooling.}
   \item \Action{Secured lab renovation;} \Narrative{won approvals despite red tape; modernizing member space.}
 \end{itemize}
