--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -8,7 +8,7 @@
 \usepackage{fontspec}
 \usepackage{microtype}
 
-% Fonts: Young Serif for headers/name, Times-style body with CI-safe fallback
+% Fonts: Young Serif for display, Times New Roman for body (TeX Gyre Termes fallback)
 \defaultfontfeatures{Ligatures=TeX}
 \IfFontExistsTF{Times New Roman}
   {\setmainfont{Times New Roman}[Scale=0.98]}
