--- a/latex/resume.tex
+++ b/latex/resume.tex
@@ -15,8 +15,8 @@
   {\setmainfont{TeX Gyre Termes}[Scale=1.0]}
 \newfontfamily\youngserif{YoungSerif-Regular.ttf}[Path=./fonts/]
 
-% Color palette
-\definecolor{Accent}{HTML}{12355B}
+% Color palettes
+\definecolor{Accent}{HTML}{4A7C3F}
 \definecolor{Slate}{HTML}{4A5568}
 \definecolor{Body}{HTML}{111827}
 
